# mtc.sh

./: .gitignore  LICENSE  Pipfile  Procfile  README.md  setup.cfg  setup.py  uwsgi.ini
mtc/: __init__.py  __main__.py  wsgi.py
mtc/core/: models.py  urls.py
mtc/rest/: routing.py  throttling.py  urls.py
mtc/settings/: defaults.py  development.py  production.py
mtc/shorten/: managers.py  models.py  urls.py  util.py  views.py
mtc/shorten/migrations/: 0001_initial.py  0002_auto_20180622_0200.py  0003_auto_20180622_0214.py
