[metadata]

name = mtc
description = Metanic URL shortening service
url = https://mtc.sh

author = Bailey Stoner
author_email = polar@metanic.org

maintainer = Bailey Stoner
maintainer_email = polar@metanic.org

keywords =
  web
  djangos
  url
  shortener

classifiers =
  Framework :: Django
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6


[options]

include_package_data = True
packages = find:
zip_safe = True

install_requires =
  django-redis-cache
  django
  djangorestframework
  djangorestframework-jwt
  psycopg2-binary
  python-memcached
  raven
  uwsgi

tests_require =
  ipython
  django-debug-toolbar
  django-extensions
  pytest
  pytest-cov
  werkzeug
  yapf


[options.package_data]

* = *.md, *.html
